--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,3 +215,13 @@ footer > div > div:nth-child(3) > ul {
     padding: 20px;
 }
 
+/* ----------------------------------------------- Three Reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reaons-heading {
+    margin-bottom: 15px;
+}
