--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,13 @@
 .bg-color-three-reasons {
     background-color: white;
 }
+.bg-color-contact {
+    background-color: #ffffff;
+}
+
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
 
 .menu-color-home {
     background-color: #e67e22;
@@ -168,7 +175,7 @@ footer {
     margin: 0;
 }
 
-footer > div > div:nth-child(3) > ul {
+footer>div>div:nth-child(3)>ul {
     padding: 0;
 }
 
@@ -217,6 +224,11 @@ footer > div > div:nth-child(3) > ul {
 
 /* ----------------------------------------------- Three Reasons */
 
+#section-margin {
+    margin: 0;
+    width: 100%;
+}
+
 .three-reasons-icon {
     font-size: 26px;
     color: #e67e22;
@@ -224,4 +236,51 @@ footer > div > div:nth-child(3) > ul {
 
 .three-reaons-heading {
     margin-bottom: 15px;
+}
+
+/* ----------------------------------------------- Personal Info */
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+    display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
+}
+
+/* ----------------------------------------------- Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-section {
+    margin: 40px 20px;
 }
